# bioval

./: .gitignore  Contribute.md  LICENSE  LICENSE.txt  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py  test.sh
.github/workflows/: publish_pypi.yml
bioval/: Readme.md
bioval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bioval/metrics/: conditional_evaluation.py  temp_kdistance.py  top_k_distance.py
bioval/tests/: test_conditional_evaluation.py  test_top_k_distance.py
bioval/tutorials/: conditional_gan.py
bioval/utils/: aggregation.py  distance.py  gpu_manager.py
metrics/: temp_kdistance.py  top_k_distance.py
